--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <h2>git y github</h2>
+
+    <header>
+            <h1>header</h1>
+        </header>
 </body>
 </html>
